my second commit

--- a/wp-content/themes/neoh/style.css
+++ b/wp-content/themes/neoh/style.css
@@ -15,8 +15,8 @@ Tags: custom-header, custom-background, threaded-comments, custom-menu, featured
 */
 /*
 
-	@Author: Frenify
-	@URL: http://themeforest.net/user/frenify
+	@Author: Infiniverse
+	@URL: 
 
 
 	This file contains the styling for the actual theme, this
