--- a/wp-content/plugins/neoh-core/shortcode/assets/css/fontello.css
+++ b/wp-content/plugins/neoh-core/shortcode/assets/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.eot?37062913');
-  src: url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.eot?37062913#iefix') format('embedded-opentype'),
-       url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.woff2?37062913') format('woff2'),
-       url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.woff?37062913') format('woff'),
-       url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.ttf?37062913') format('truetype'),
-       url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.svg?37062913#fontello') format('svg');
+  src: url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.eot?37062913');
+  src: url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.eot?37062913#iefix') format('embedded-opentype'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.woff2?37062913') format('woff2'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.woff?37062913') format('woff'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.ttf?37062913') format('truetype'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.svg?37062913#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.svg?37062913#fontello') format('svg');
+    src: url('http://https://github.com/dangquang1506/dangquang1506/wp-content/plugins/neoh-core/shortcode/assets/css/font/fontello.svg?37062913#fontello') format('svg');
   }
 }
 */
