--- a/wp-content/themes/neoh/framework/css/fontello.css
+++ b/wp-content/themes/neoh/framework/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('/wp-content/themes/neoh/framework/css/font/fontello.eot?65176178');
-  src: url('/wp-content/themes/neoh/framework/css/font/fontello.eot?65176178#iefix') format('embedded-opentype'),
-       url('/wp-content/themes/neoh/framework/css/font/fontello.woff2?65176178') format('woff2'),
-       url('/wp-content/themes/neoh/framework/css/font/fontello.woff?65176178') format('woff'),
-       url('/wp-content/themes/neoh/framework/css/font/fontello.ttf?65176178') format('truetype'),
-       url('/wp-content/themes/neoh/framework/css/font/fontello.svg?65176178#fontello') format('svg');
+  src: url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.eot?65176178');
+  src: url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.eot?65176178#iefix') format('embedded-opentype'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.woff2?65176178') format('woff2'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.woff?65176178') format('woff'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.ttf?65176178') format('truetype'),
+       url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.svg?65176178#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('/wp-content/themes/neoh/framework/css/font/fontello.svg?65176178#fontello') format('svg');
+    src: url('http://https://github.com/dangquang1506/dangquang1506/wp-content/themes/neoh/framework/css/font/fontello.svg?65176178#fontello') format('svg');
   }
 }
 */
